--- a/milleyum/package.json
+++ b/milleyum/package.json
@@ -32,7 +32,8 @@
     "@mikro-orm/postgresql": "6.4.3",
     "@rsc-labs/medusa-store-analytics-v2": "^0.1.4",
     "awilix": "^8.0.1",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "@medusajs/test-utils": "2.8.8",
